# precision-analysis

./: .gitignore  CMakeLists.txt  Point.cpp  README.md  app.py  main.ipynb  pyproject.toml  pytest.ini  requirements.txt  test_py.py
.github/workflows/: ci.yml
include/precision-analysis/: Types.h
src/: Parser.cpp  app.py  daniilidis.py  gause_noise.py  li_wang_wu.py  main.py  park_martin.py  perlin_noise.py  shah.py  tsai_lenz.py  utils.py
tests/: README.md  __init__.py  conftest.py  generate_test_data.py  measure_thresholds.py  test_algorithms.py  test_end_to_end.py  test_functions_call.py  test_noise.py  test_utils.py  threshold_measurements.json  thresholds_table.csv
tests/data/: .gitkeep
